# Authorative-DNS-server

./: Cargo.toml  README.md
config/: dns.toml
migrations/: 001_initial_schema.sql
scripts/: setup_database.py  setup_database.sh
src/: config.rs  database.rs  dns_checker.rs  dns_handler.rs  dns_server.rs  domain_manager.rs  http_redirect.rs  lib.rs  main.rs  supabase_client.rs
