[package]
name = "cybertemp-dns"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
trust-dns-server = "0.23"
trust-dns-proto = "0.23"
trust-dns-resolver = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
hyper = { version = "0.14", features = ["server"] }
sqlx = { version = "0.7", default-features = false, features = ["postgres", "runtime-tokio", "chrono"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"